Remove the extra "v" on the docs header
Turns out that the reported version includes the “v” at the beginning.

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -34,7 +34,7 @@
 
 
     <p class="navbar-text navbar-right hidden-xs">
-      v{{addonVersion}}
+      {{addonVersion}}
       <a href="https://github.com/Panman8201/ember-froala-editor" target="_blank" class="navbar-link">
         <i class="fa fa-github-square"></i>
       </a>
