--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -5,7 +5,9 @@
     <div class="page-header"><h1 class="h3">ember-froala-editor</h1></div>
 
 
-    <p class="lead">Bring the <a href="https://www.froala.com/wysiwyg-editor" target="_blank">Froala WYSIWYG Editor</a> into an ember-cli project with this addon. Besides importing the required Froala Editor files, the <em>main</em> part of this addon is the <code>&#123;&#123;froala-editor&#125;&#125;</code> component.</p>
+    <p class="lead">
+      Bring the <a href="https://www.froala.com/wysiwyg-editor" target="_blank">Froala WYSIWYG Editor</a> into an ember-cli project with this addon. Besides importing the required Froala Editor files, the <em>main</em> part of this addon is the <code>&#123;&#123;froala-editor&#125;&#125;</code> component. Checkout the <a href="https://github.com/Panman8201/ember-froala-editor" target="_blank">Github page</a> to take a look at the code and <a href="https://github.com/Panman8201/ember-froala-editor/issues" target="_blank">submit issues</a>.
+    </p>
 
 
     <p class="lead">Note: Froala Editor is a <a href="https://www.froala.com/wysiwyg-editor/pricing" target="_blank">paid for product</a>, but is a lovely experience for the end users.</p>
