--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -6,7 +6,7 @@
 
 
     <p class="lead">
-      Bring the <a href="https://www.froala.com/wysiwyg-editor" target="_blank">Froala WYSIWYG Editor</a> into an ember-cli project with this addon. Besides importing the required Froala Editor files, the <em>main</em> part of this addon is the <code>&#123;&#123;froala-editor&#125;&#125;</code> component. Checkout the <a href="https://github.com/Panman8201/ember-froala-editor" target="_blank">Github page</a> to take a look at the code and <a href="https://github.com/Panman8201/ember-froala-editor/issues" target="_blank">submit issues</a>.
+      Bring the <a href="https://www.froala.com/wysiwyg-editor" target="_blank">Froala WYSIWYG Editor</a> into an ember-cli project with this addon. Besides importing the required Froala Editor files, the <em>main</em> part of this addon is the <code>&#123;&#123;froala-editor&#125;&#125;</code> component. Checkout the <a href="https://github.com/Panman8201/ember-froala-editor" target="_blank">Github page</a> to take a look at the code and to <a href="https://github.com/Panman8201/ember-froala-editor/issues" target="_blank">submit issues</a>.
     </p>
 
 
