[DOCS] Paragraph alignment changes
Really these are just some minor changes committed in order to try
getting the `gh-pages` branch to update properly…

--- a/tests/dummy/app/templates/addon-components/froala-content.hbs
+++ b/tests/dummy/app/templates/addon-components/froala-content.hbs
@@ -9,12 +9,7 @@
 
 
     <p class="lead">
-      According to the
-      <a href="https://www.froala.com/wysiwyg-editor/docs#frontend" target="_blank">
-        Froala Editor documentation</a>,
-      content created from the editor should be contained
-      within an element with the <code>.fr-view</code> class.
-      This is simply a component that applies the class.
+      According to the <a href="https://www.froala.com/wysiwyg-editor/docs#frontend" target="_blank">Froala Editor documentation</a>, content created from the editor should be contained within an element with the <code>.fr-view</code> class. This is simply a component that applies the class.
     </p>
 
 
