--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -10,7 +10,9 @@
     </p>
 
 
-    <p class="lead">Note: Froala Editor is a <a href="https://www.froala.com/wysiwyg-editor/pricing" target="_blank">paid for product</a>, but is a lovely experience for the end users.</p>
+    <p class="lead">
+      Note: Froala Editor is a <a href="https://www.froala.com/wysiwyg-editor/pricing" target="_blank">paid for product</a>, but is a lovely experience for the end users.
+    </p>
 
 
     {{froala-editor options=exampleOptions}}
