Positional params support
Fixes #14

--- a/tests/dummy/app/templates/addon-components/froala-content.hbs
+++ b/tests/dummy/app/templates/addon-components/froala-content.hbs
@@ -54,8 +54,8 @@
 
     <p class="lead">
       This component is very basic, mainly just a wrapper for the class.
-      However, you can use it either inline or as a block. Both will
-      produce the same result.
+      However, you can use it inline (specifying the attribute or using <a href="https://guides.emberjs.com/v2.8.0/components/passing-properties-to-a-component/#toc_positional-params" target="_blank">positional params</a>) or as a block.
+      Any way will produce the same result.
     </p>
 
 
@@ -65,6 +65,7 @@
 
         <h3 class="h5">Inline</h3>
           <pre>&#123;&#123;froala-content content=someFroalaContent&#125;&#125;</pre>
+          <pre>&#123;&#123;froala-content someFroalaContent&#125;&#125;</pre>
 
 
       </div>
