Output the _initial_ content in the template
This should help when using the `initOnClick` option, since the
‘initialized’ event won’t fire until clicked, there for the content
wouldn’t have been initially set on the editor.

--- a/addon/templates/components/froala-editor.hbs
+++ b/addon/templates/components/froala-editor.hbs
@@ -1,2 +1,3 @@
-{{!-- content set directly on the editor instance --}}
+{{!-- content updated directly on the editor instance --}}
 {{!-- https://www.froala.com/wysiwyg-editor/docs/methods#html.set --}}
+{{{unbound content}}}
