--- a/tests/dummy/app/templates/addon/installation.hbs
+++ b/tests/dummy/app/templates/addon/installation.hbs
@@ -18,8 +18,7 @@
 
 
     <p>
-      This addon will also add a couple other dependencies to your project.
-      The <code><a href="https://github.com/froala/wysiwyg-editor" target="_blank">froala-wysiwyg-editor</a></code> will be added to your <code>bower.json</code> dependencies, and <code><a href="https://github.com/martndemus/ember-cli-font-awesome" target="_blank">ember-cli-font-awesome</a></code> will be added to your <code>package.json</code> dependencies (to satisfy the <a href="https://www.froala.com/wysiwyg-editor/docs#backend" target="_blank">Font Awesome requirement</a>). And at this point jQuery is required for Ember, so there is no need to add a dependency for that.
+      This addon will also add a couple other dependencies to your project. The <code><a href="https://github.com/froala/wysiwyg-editor" target="_blank">froala-wysiwyg-editor</a></code> will be added to your <code>bower.json</code> dependencies, and <code><a href="https://github.com/martndemus/ember-font-awesome" target="_blank">ember-font-awesome</a></code> will be added to your <code>package.json</code> dependencies (to satisfy the <a href="https://www.froala.com/wysiwyg-editor/docs/overview#backend" target="_blank">Font Awesome requirement</a>). And at this point jQuery is required for Ember, so there is no need to add a dependency for that.
     </p>
 
 
