--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -13,9 +13,9 @@
 
 
     {{#link-to "index" class="navbar-brand"}}
-      <img src="ember-icon.png"  alt="Ember.js Logo" width="40"  height="64" class="visible-xs-inline-block" />
-      <img src="ember-logo.png"  alt="Ember.js Logo" width="155" height="64" class="hidden-xs" />
-      <img src="froala-logo.png" alt="Froala Logo"   width="174" height="64" />
+      <img src="{{concat (rooturl) 'ember-icon.png'}}"  alt="Ember.js Logo" width="40"  height="64" class="visible-xs-inline-block" />
+      <img src="{{concat (rooturl) 'ember-logo.png'}}"  alt="Ember.js Logo" width="155" height="64" class="hidden-xs" />
+      <img src="{{concat (rooturl) 'froala-logo.png'}}" alt="Froala Logo"   width="174" height="64" />
       <span>Editor</span>
     {{/link-to}}
 
@@ -39,7 +39,7 @@
         <i class="fa fa-github-square"></i>
       </a>
       <a href="https://www.froala.com/wysiwyg-editor/" target="_blank" class="navbar-link">
-        <img src="froala-icon.jpg" alt="Froala Icon" width="30" height="30" class="img-rounded" />
+        <img src="{{concat (rooturl) 'froala-icon.jpg'}}" alt="Froala Icon" width="30" height="30" class="img-rounded" />
       </a>
     </p>
 
