--- a/tests/dummy/app/templates/addon-helpers/merged-hash.hbs
+++ b/tests/dummy/app/templates/addon-helpers/merged-hash.hbs
@@ -17,7 +17,7 @@
 
 
     <p>
-      The helper assumes all parameters are objects, and then uses <code>Object.assign()</code> to merge everything together. Each parameter takes priority on the previous, with the "hash" being the final. So you can merge multiple "levels" of options. Ex:
+      The helper assumes all parameters are objects, and then uses <code>Ember.assign()</code> to merge everything together. Each parameter takes priority on the previous, with the "hash" being the final. So you can merge multiple "levels" of options. Ex:
     </p>
 
 
