Adjust the documentation to better match Froala's new Website design
Basically the primary color went from maroon to blue, and the logo
changed.

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -13,10 +13,18 @@
 
 
     {{#link-to "index" class="navbar-brand"}}
-      <img src="{{concat (rooturl) 'ember-icon.png'}}"  alt="Ember.js Logo" width="40"  height="64" class="visible-xs-inline-block" />
-      <img src="{{concat (rooturl) 'ember-logo.png'}}"  alt="Ember.js Logo" width="155" height="64" class="hidden-xs" />
-      <img src="{{concat (rooturl) 'froala-logo.png'}}" alt="Froala Logo"   width="174" height="64" />
-      <span>Editor</span>
+      <img src="{{concat (rooturl) 'ember-froala-editor.png'}}"
+        alt="Ember.js Froala Editor Logos"
+        width="132" height="64"
+        class="visible-xs-inline-block" />
+      <img src="{{concat (rooturl) 'ember-logo.png'}}"
+        alt="Ember.js Logo"
+        width="141" height="64"
+        class="hidden-xs" />
+      <img src="{{concat (rooturl) 'froala-logo.svg'}}"
+        alt="Froala Logo"
+        width="301" height="64"
+        class="hidden-xs" />
     {{/link-to}}
 
 
@@ -39,7 +47,7 @@
         <i class="fa fa-github-square"></i>
       </a>
       <a href="https://www.froala.com/wysiwyg-editor/" target="_blank" class="navbar-link">
-        <img src="{{concat (rooturl) 'froala-icon.jpg'}}" alt="Froala Icon" width="30" height="30" class="img-rounded" />
+        <img src="{{concat (rooturl) 'froala-icon.png'}}" alt="Froala Icon" width="30" height="30" class="img-rounded" />
       </a>
     </p>
 
