--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -1,6 +1,5 @@
 /* Match Froala's background and add margin for fixed navbar */
 body {
-  background-color: #efefef;
   margin-top: 64px;
 }
 
@@ -25,7 +24,7 @@ div#app-loading {
   margin-top: -75px;
   margin-left: -70px;
   z-index: 1000;
-  color: #b8312f;
+  color: #2196F3;
   font-size: x-large;
 }
 
@@ -58,7 +57,7 @@ body.ember-application > div.ember-view > div.container {
 
 /* Reduce the "gutter" between panels */
 section.panel {
-  margin-bottom: 14px;
+  margin: 3px 3px 14px;
 }
 
 
@@ -77,7 +76,7 @@ a.navbar-brand span {
 /* Fix th navbar links to line up properly */
 /* Use negative margins to pull everything back into the navbar's height */
 a.navbar-link i.fa {
-  font-size: 2.6em;
+  font-size: 2.7em;
   margin: -7px 0;
   vertical-align: middle;
 }
@@ -113,15 +112,8 @@ aside > div.affix {
 header.navbar-default a.navbar-link {
   color: #000000;
 }
-a.navbar-link:hover {
+a.navbar-link {
   text-decoration: none;
-}
-
-
-/* Make panel headers "Froala like" */
-section.panel hgroup.panel-heading {
-  background-color: #b8312f;
-  color: #ffffff;
 }
 
 
@@ -148,14 +140,14 @@ nav.list-group a.list-group-item code {
 nav.list-group a.list-group-item.active {
   background-color: #ffffff;
   border-color: #dddddd;
-  border-left: 3px solid #b8312f !important;
-  color: #b8312f;
+  border-left: 3px solid #2196F3 !important;
+  color: #2196F3;
   padding-left: 12px;
 }
 nav.list-group a.active:hover {
   background-color: #f5f5f5;
   border-color: #dddddd;
-  color: #b8312f;
+  color: #2196F3;
 }
 
 
@@ -182,11 +174,6 @@ a#back-button {
   font-size: 20px;
   line-height: 1.42;
   border-radius: 20px;
-}
-
-
-.btn.btn-danger {
-  background-color: #b8312f;
 }
 
 
@@ -233,13 +220,13 @@ section.panel > div.table-responsive > table.table tr > *:first-child {
 }
 section.panel > table.table tr *:last-child,
 section.panel > div.table-responsive > table.table tr > *:last-child {
-  padding-rigth: 15px;
+  padding-right: 15px;
 }
 
 
 /* Customizations to the code examples */
 code, pre {
-  color: #b8312f;
+  color: #444;
 }
 pre {
   line-height: 1.5;
