Import froala-editor files from npm instead of bower
This aligns with ember-cli’s move away from bower, and instead imports
files from npm deps. In addition, users will no longer need to
separately update the froala-wysiwyg-editor bower dep when new versions
are released. Big thanks to @dfreeman ! Resolves #20

--- a/tests/dummy/app/templates/addon/installation.hbs
+++ b/tests/dummy/app/templates/addon/installation.hbs
@@ -18,7 +18,7 @@
 
 
     <p>
-      This addon will also add a couple other dependencies to your project. The <code><a href="https://github.com/froala/wysiwyg-editor" target="_blank">froala-wysiwyg-editor</a></code> will be added to your <code>bower.json</code> dependencies, and <code><a href="https://github.com/martndemus/ember-font-awesome" target="_blank">ember-font-awesome</a></code> will be added to your <code>package.json</code> dependencies (to satisfy the <a href="https://www.froala.com/wysiwyg-editor/docs/overview#backend" target="_blank">Font Awesome requirement</a>). And at this point jQuery is required for Ember, so there is no need to add a dependency for that.
+      A dependency for <code><a href="https://github.com/martndemus/ember-font-awesome" target="_blank">ember-font-awesome</a></code> will be added to your projects <code>package.json</code> to satisfy the <a href="https://www.froala.com/wysiwyg-editor/docs/overview#backend" target="_blank">Font Awesome requirement</a>. The Froala Editor files will be imported directly from this addons dependency for <code>froala-editor</code>. And at this point jQuery is required for Ember, so there is no need to add a jQuery dependency.
     </p>
 
 
