[DOCS] Change suggested content "actions up" hook to `update`

--- a/tests/dummy/app/templates/addon-components/froala-editor.hbs
+++ b/tests/dummy/app/templates/addon-components/froala-editor.hbs
@@ -47,7 +47,7 @@
         <th scope="row">content</th>
         <td>string | <a href="http://emberjs.com/api/classes/Ember.String.html#method_htmlSafe" target="_blank">SafeString</a></td>
         <td><code>''</code></td>
-        <td>String of HTML for the editor to use. Note, this is <em>not</em> updated as the editor content changes. Instead use <code>on-*-getHtml</code> to <code>(mut)</code> the original property.</td>
+        <td>String of HTML for the editor to use. Note, this is <em>not</em> updated as the editor content changes. Instead use <code>update</code> to <code>(mut)</code> the original property.</td>
       </tr>
       <tr>
         <th scope="row">on-*</th>
