Add ability to define froala-editor options as individual attributes
Enables the ability to define options as attributes individually. Added
a test and documented the new feature. Resolves #15

--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -248,6 +248,12 @@ pre {
 }
 
 
+/* remove list bottom margin if it's the last thing */
+section.panel > div.panel-body > ol:last-child {
+  margin-bottom: 0;
+}
+
+
 footer {
  line-height: 1.1;
 }
